Fix spacing for footer reference

--- a/src/app/standalone/footer/footer.component.scss
+++ b/src/app/standalone/footer/footer.component.scss
@@ -14,7 +14,7 @@ footer {
 }
 
 a {
-  margin: 1em;
+  margin: 1em 0 1em 1em;
   font-size: 10px;
   color: var(--on-background);
   opacity: 0.7;
